--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ProseMirror .is-empty::before {
+  @apply h-0 float-left text-slate-500 pointer-events-none content-[attr(data-placeholder)];
+}
